fix slick arrows visiblity

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -225,3 +225,15 @@ body {
     left: 0;
     padding: 1.25rem;
 }
+
+.slick-arrow {
+    z-index: 2000;
+}
+
+.slick-next {
+    right: 35px;
+}
+
+.slick-prev {
+    left: 35px;
+}
